# manufacturing

./: .gitignore  api.html  genindex.html  importing_and_exporting.html  index.html  installation.html  license.txt  objects.inv  plotting.html  pyproject.toml  readme.md  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: buildTheDocs.yml  checkTheDocs.yml  docsBuildCheck.yml  publish.yml  publishTest.yml  test.yml
_sources/: api.rst.txt  plotting.rst.txt
docs/: api.rst  conf.py  importing_and_exporting.rst  index.rst  installation.rst  plotting.rst
docs/_build/: api.html  genindex.html  index.html  objects.inv  plotting.html
docs/_build/.doctrees/: api.doctree  environment.pickle  importing_and_exporting.doctree  index.doctree  installation.doctree  plotting.doctree
docs/_build/_sources/: api.rst.txt  importing_and_exporting.rst.txt  index.rst.txt
docs/_build/html/: .buildinfo  api.html  genindex.html  importing_and_exporting.html  index.html  installation.html  objects.inv  plotting.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  plotting.rst.txt
examples/: Manufacturing Demo.ipynb  control_chart.py  control_chart_auto.py  cp_calculation.py  cpk_boxplot.py  cpk_calculation.py  cpk_plot.py  csv_import.py  data_generation.py  example_data.csv  example_data.xlsx  example_data_with_faults.xlsx  import_from_csv.py  import_from_excel.py  import_pm_data.py  imr_chart.py  imr_chart_manual.py  long_file_chart.py  long_running.py  ppk_calculation.py  ppk_plot.py  report.py  report_generation.py  xbarr_chart.py  xbars_chart.py  xbars_generated_data.py  xmr_chart.py  xmr_chart_manual.py  xmr_chart_overcontrol.py
examples/control_chart_examples/: control_chart_auto.py  long_file_chart.py  np_chart.py  p_chart.py  p_chart_dt_lots.py  precontrol_chart.py  xbarr_chart.py  xbars_chart.py  xmr_chart.py  xmr_chart_alt_with_dates.py
examples/data/: example_data.csv  example_data.xlsx  example_data_with_faults.csv  example_data_with_faults.xlsx  motor-test-data.tsv  pchart_data_by_dt.tsv  pchart_data_by_lots.tsv  pchart_data_by_lots_2.tsv  pm-high-speed-current.csv  pm-high-speed.csv  position-data.txt
manufacturing/: __init__.py  alt_analysis.py  alt_vis.py  analysis.py  data_import.py  lookup_tables.py  report.py  util.py  visual.py
test/: __init__.py  test_analysis.py  test_import.py  test_report.py  test_visual.py  test_xmr_chart.py
test/data/: example_data.csv
