[tool.poetry]
name = "manufacturing"
version = "1.3.11"
description = "Six-Sigma based analysis of manufacturing data"
readme = 'readme.md'
authors = ["Jason R. Jones <slightlynybbled@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
matplotlib = "^3.8.0"
openpyxl = "^3.0.9"
pandas = "^2.1.0"
scipy = "^1.7.0"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]
black = '^22.3.0'
coverage = "^6.3.2"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
Sphinx = "^4.5.0"
twine = "^4.0.0"
wheel = "^0.37.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
