[tool.poetry]
name = "manufacturing"
version = "1.4.1"
description = "Six-Sigma based analysis of manufacturing data"
readme = 'readme.md'
authors = ["Jason R. Jones <slightlynybbled@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"
matplotlib = "^3.8.0"
openpyxl = "^3.0.9"
pandas = "^2.2.0"
scipy = "^1.12.0"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]
black = '^24.0.0'
coverage = "^6.3.2"
pytest = "^7.4.0"
pytest-cov = "^5.0.0"
Sphinx = "^7.2.6"
twine = "^5.0.0"
wheel = "^0.43.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
