[project]
name = "manufacturing"
version = "1.5.0"
description = "Six-Sigma based analysis of manufacturing data"
authors = [
    {name = "Jason R. Jones", email = "slightlynybbled@gmail.com"},
]
readme = {file = "readme.md", content-type = "text/markdown"}
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8.0",
    "openpyxl>=3.0.9",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    "xlrd>=2.0.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Manufacturing",
    "Natural Language :: English",
]

[build-system]
requires = ["setuptools > 75.0.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Documentation = "https://slightlynybbled.github.io/manufacturing/index.html"
Repository = "https://github.com/slightlynybbled/manufacturing"

[tool.uv]
dev-dependencies = [
    "coverage",
    "pytest",
    "pytest-cov",
    "ruff",
    "Sphinx",
    "twine",
    "wheel",
]
package = true

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["manufacturing"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

